--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^0.27.2",
     "expo": "~51.0.9",
+    "expo-av": "^14.0.5",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.6",
     "expo-linking": "~6.3.1",
@@ -33,12 +34,17 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-animatable": "^1.4.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-video": "^6.1.2",
     "react-native-web": "~0.19.10",
+    "react-native-webview": "^13.10.3",
+    "react-native-youtube": "^2.0.2",
+    "react-native-youtube-iframe": "^2.3.0",
     "util": "^0.12.5"
   },
   "devDependencies": {
