--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
     "axios": "^0.27.2",
     "expo": "~51.0.9",
     "expo-av": "^14.0.5",
@@ -42,7 +43,6 @@
     "react-native-screens": "3.31.1",
     "react-native-video": "^6.1.2",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "^13.10.3",
     "react-native-youtube": "^2.0.2",
     "react-native-youtube-iframe": "^2.3.0",
     "util": "^0.12.5"
