--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
@@ -24,6 +25,7 @@
     "expo-av": "^14.0.5",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.6",
+    "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
     "expo-secure-store": "~13.0.1",
@@ -35,6 +37,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-animated-loader": "^1.0.0",
     "react-native-animatable": "^1.4.0",
     "react-native-config": "^1.5.1",
     "react-native-dotenv": "^3.4.11",
@@ -42,12 +45,12 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-toast-notifications": "^3.4.0",
     "react-native-video": "^6.1.2",
     "react-native-web": "~0.19.10",
     "react-native-youtube": "^2.0.2",
     "react-native-youtube-iframe": "^2.3.0",
-    "util": "^0.12.5",
-    "expo-linear-gradient": "~13.0.2"
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
