--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-swiper": "^1.6.0",
     "react-native-toast-notifications": "^3.4.0",
     "react-native-video": "^6.1.2",
     "react-native-web": "~0.19.10",
