--- a/package.json
+++ b/package.json
@@ -43,9 +43,12 @@
     "react-native-config": "^1.5.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-image-zoom-viewer": "^3.0.1",
+    "react-native-lightbox-v2": "^0.9.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.3.0",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-notifications": "^3.4.0",
     "react-native-video": "^6.1.2",
