--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/images/splashscreen.jpg",
-      "resizeMode": "cover" 
+      "resizeMode": "cover"
     },
     "ios": {
       "supportsTablet": true
@@ -22,7 +22,8 @@
       "splash": {
         "image": "./assets/images/splashscreenandroid.jpg",
         "resizeMode": "cover"
-      }
+      },
+      "package": "com.anonymous.nhakhoathuyanh"
     },
     "web": {
       "bundler": "metro",
