--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -41,6 +41,7 @@
     "react-native-animatable": "^1.4.0",
     "react-native-animated-loader": "^1.0.0",
     "react-native-config": "^1.5.1",
+    "react-native-date-picker": "^5.0.4",
     "react-native-dotenv": "^3.4.11",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-reanimated": "~3.10.1",
