--- a/package.json
+++ b/package.json
@@ -21,23 +21,23 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
-    "axios": "^0.27.2",
-    "expo": "~51.0.9",
-    "expo-av": "^14.0.5",
+    "axios": "^1.7.2",
+    "expo": "~51.0.21",
+    "expo-av": "~14.0.6",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.6",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.14",
-    "expo-secure-store": "~13.0.1",
+    "expo-router": "~3.5.18",
+    "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.4",
+    "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "0.74.3",
     "react-native-animatable": "^1.4.0",
     "react-native-animated-loader": "^1.0.0",
     "react-native-config": "^1.5.1",
@@ -45,9 +45,9 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.3.0",
+    "react-native-svg": "15.2.0",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-notifications": "^3.4.0",
     "react-native-video": "^6.1.2",
@@ -62,7 +62,7 @@
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.1",
+    "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.3.3"
