--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "axios": "^1.7.2",
     "expo": "~51.0.21",
     "expo-av": "~14.0.6",
+    "expo-camera": "~15.0.14",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.6",
+    "expo-image": "~1.12.13",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
+    "expo-media-library": "~16.0.4",
     "expo-router": "~3.5.18",
     "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.4",
@@ -49,8 +52,10 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-toast-notifications": "^3.4.0",
     "react-native-video": "^6.1.2",
+    "react-native-vision-camera": "^4.5.0",
     "react-native-web": "~0.19.10",
     "react-native-youtube": "^2.0.2",
     "react-native-youtube-iframe": "^2.3.0",
