--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native": "0.74.3",
     "react-native-animatable": "^1.4.0",
     "react-native-animated-loader": "^1.0.0",
+    "react-native-calendars": "^1.1305.0",
     "react-native-config": "^1.5.1",
     "react-native-date-picker": "^5.0.4",
     "react-native-dotenv": "^3.4.11",
