--- a/package.json
+++ b/package.json
@@ -48,11 +48,13 @@
     "react-native-date-picker": "^5.0.4",
     "react-native-dotenv": "^3.4.11",
     "react-native-image-zoom-viewer": "^3.0.1",
+    "react-native-pager-view": "6.3.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
     "react-native-toast-notifications": "^3.4.0",
     "react-native-video": "^6.1.2",
@@ -60,6 +62,7 @@
     "react-native-web": "~0.19.10",
     "react-native-youtube": "^2.0.2",
     "react-native-youtube-iframe": "^2.3.0",
+    "socket.io-client": "^4.7.5",
     "util": "^0.12.5"
   },
   "devDependencies": {
