--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-camera": "~15.0.14",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.6",
+    "expo-haptics": "~13.0.1",
     "expo-image": "~1.12.13",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
@@ -64,8 +65,7 @@
     "react-native-youtube": "^2.0.2",
     "react-native-youtube-iframe": "^2.3.0",
     "socket.io-client": "^4.7.5",
-    "util": "^0.12.5",
-    "expo-haptics": "~13.0.1"
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
