Update upload image to server

--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "react-native-youtube": "^2.0.2",
     "react-native-youtube-iframe": "^2.3.0",
     "socket.io-client": "^4.7.5",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "expo-image-picker": "~15.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
