--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-font": "~12.0.6",
     "expo-haptics": "~13.0.1",
     "expo-image": "~1.12.13",
+    "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-media-library": "~16.0.4",
@@ -65,8 +66,7 @@
     "react-native-youtube": "^2.0.2",
     "react-native-youtube-iframe": "^2.3.0",
     "socket.io-client": "^4.7.5",
-    "util": "^0.12.5",
-    "expo-image-picker": "~15.0.7"
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
