--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.7.2",
     "expo": "~51.0.31",
     "expo-av": "~14.0.7",
+    "expo-build-properties": "~0.12.5",
     "expo-camera": "~15.0.15",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.10",
@@ -66,11 +67,11 @@
     "react-native-video": "^6.1.2",
     "react-native-vision-camera": "^4.5.0",
     "react-native-web": "~0.19.10",
+    "react-native-webview": "^13.6.3",
     "react-native-youtube": "^2.0.2",
     "react-native-youtube-iframe": "^2.3.0",
     "socket.io-client": "^4.7.5",
-    "util": "^0.12.5",
-    "expo-build-properties": "~0.12.5"
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
