--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo-media-library": "~16.0.4",
     "expo-router": "~3.5.23",
     "expo-secure-store": "~13.0.2",
+    "expo-sharing": "^12.0.1",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
@@ -52,9 +53,11 @@
     "react-native-calendars": "^1.1305.0",
     "react-native-config": "^1.5.1",
     "react-native-date-picker": "^5.0.4",
+    "react-native-dialog": "^9.3.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-image-zoom-viewer": "^3.0.1",
+    "react-native-modal": "^13.0.1",
     "react-native-pager-view": "6.3.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
@@ -65,6 +68,7 @@
     "react-native-toast-message": "^2.2.0",
     "react-native-toast-notifications": "^3.4.0",
     "react-native-video": "^6.1.2",
+    "react-native-view-shot": "3.8.0",
     "react-native-vision-camera": "^4.5.0",
     "react-native-web": "~0.19.10",
     "react-native-webview": "^13.6.3",
