--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-native-date-picker": "^5.0.4",
     "react-native-dialog": "^9.3.0",
     "react-native-dotenv": "^3.4.11",
+    "react-native-file-viewer": "^2.1.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-modal": "^13.0.1",
@@ -81,6 +82,7 @@
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native-fetch-blob": "^0.10.11",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.4",
