--- a/app.json
+++ b/app.json
@@ -8,7 +8,8 @@
     "scheme": "nha-khoa-thuy-anh",
     "userInterfaceStyle": "automatic",
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.nhakhoathuyanh"
     },
     "android": {
       "adaptiveIcon": {
