--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/slider": "4.5.2",
+    "@react-native-firebase/app": "^21.6.1",
+    "@react-native-firebase/messaging": "^21.6.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
@@ -28,6 +30,8 @@
     "expo-build-properties": "~0.12.5",
     "expo-camera": "~15.0.16",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.29",
+    "expo-device": "~6.0.2",
     "expo-font": "~12.0.10",
     "expo-haptics": "~13.0.1",
     "expo-image": "~1.13.0",
@@ -35,6 +39,7 @@
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-media-library": "~16.0.5",
+    "expo-notifications": "~0.28.19",
     "expo-router": "~3.5.24",
     "expo-secure-store": "~13.0.2",
     "expo-sharing": "^12.0.1",
@@ -75,8 +80,7 @@
     "react-native-youtube": "^2.0.2",
     "react-native-youtube-iframe": "^2.3.0",
     "socket.io-client": "^4.7.5",
-    "util": "^0.12.5",
-    "expo-dev-client": "~4.0.29"
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
