--- a/eas.json
+++ b/eas.json
@@ -33,9 +33,9 @@
   "submit": {
     "production": {
       "ios": {
-        "appleId": "taundat.business@gmail.com",
-        "ascAppId": "6739554950",
-        "appleTeamId": "3569GA8ZVS"
+        "appleId": "thuyanh.founder@gmail.com",
+        "ascAppId": "6743517132",
+        "appleTeamId": "R6DQ362W3S"
       }
     }
   }
