--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
     "expo": "~51.0.39",
+    "expo-application": "~5.9.1",
     "expo-av": "~14.0.7",
     "expo-build-properties": "~0.12.5",
     "expo-camera": "~15.0.16",
@@ -52,6 +53,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-animatable": "^1.4.0",
+    "react-native-blob-util": "^0.21.2",
     "react-native-calendars": "^1.1305.0",
     "react-native-config": "^1.5.1",
     "react-native-date-picker": "^5.0.4",
@@ -62,6 +64,7 @@
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "6.3.0",
+    "react-native-pdf": "^6.7.7",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
@@ -78,8 +81,7 @@
     "react-native-youtube": "^2.0.2",
     "react-native-youtube-iframe": "^2.3.0",
     "socket.io-client": "^4.7.5",
-    "util": "^0.12.5",
-    "expo-application": "~5.9.1"
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
