--- a/package.json
+++ b/package.json
@@ -14,44 +14,59 @@
   "jest": {
     "preset": "jest-expo"
   },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "react-native-file-viewer",
+          "react-native-image-zoom-viewer",
+          "react-native-swiper",
+          "react-native-youtube",
+          "react-native-toast-notifications"
+        ],
+        "listUnknownPackages": false
+      }
+    }
+  },
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/netinfo": "^11.4.1",
-    "@react-native-community/slider": "4.5.2",
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/native-stack": "^6.9.26",
+    "@react-native-community/slider": "4.5.5",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
-    "expo": "~51.0.39",
-    "expo-application": "~5.9.1",
-    "expo-av": "~14.0.7",
-    "expo-build-properties": "~0.12.5",
-    "expo-camera": "~15.0.16",
-    "expo-constants": "~16.0.2",
-    "expo-dev-client": "~4.0.29",
-    "expo-device": "~6.0.2",
-    "expo-font": "~12.0.10",
-    "expo-haptics": "~13.0.1",
-    "expo-image": "~1.13.0",
-    "expo-image-picker": "~15.0.7",
-    "expo-linear-gradient": "~13.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-media-library": "~16.0.5",
-    "expo-notifications": "~0.28.19",
-    "expo-router": "~3.5.24",
-    "expo-secure-store": "~13.0.2",
-    "expo-sharing": "^12.0.1",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-updates": "^0.25.27",
-    "expo-web-browser": "~13.0.3",
+    "expo": "^52.0.44",
+    "expo-application": "~6.0.2",
+    "expo-av": "~15.0.2",
+    "expo-build-properties": "~0.13.2",
+    "expo-camera": "~16.0.18",
+    "expo-constants": "~17.0.8",
+    "expo-dev-client": "~5.0.19",
+    "expo-device": "~7.0.3",
+    "expo-font": "~13.0.4",
+    "expo-haptics": "~14.0.1",
+    "expo-image": "~2.0.7",
+    "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-linking": "~7.0.5",
+    "expo-media-library": "~17.0.6",
+    "expo-notifications": "~0.29.14",
+    "expo-router": "^4.0.20",
+    "expo-secure-store": "~14.0.1",
+    "expo-sharing": "~13.0.1",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.9",
+    "expo-updates": "~0.27.4",
+    "expo-web-browser": "~14.0.2",
     "lodash.debounce": "^4.0.8",
+    "lottie-react-native": "7.1.0",
     "nativewind": "^2.0.11",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.9",
     "react-native-animatable": "^1.4.0",
     "react-native-blob-util": "^0.21.2",
     "react-native-calendars": "^1.1305.0",
@@ -60,37 +75,37 @@
     "react-native-dialog": "^9.3.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-file-viewer": "^2.1.5",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-modal": "^13.0.1",
-    "react-native-pager-view": "6.3.0",
+    "react-native-pager-view": "6.5.1",
     "react-native-pdf": "^6.7.7",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.8.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-tab-view": "^3.5.2",
+    "react-native-tab-view": "^4.0.5",
     "react-native-toast-message": "^2.2.0",
     "react-native-toast-notifications": "^3.4.0",
     "react-native-video": "^6.1.2",
-    "react-native-view-shot": "3.8.0",
-    "react-native-vision-camera": "^4.5.0",
-    "react-native-web": "~0.19.10",
-    "react-native-webview": "^13.6.3",
+    "react-native-view-shot": "~4.0.3",
+    "react-native-web": "~0.19.13",
+    "react-native-webview": "13.12.5",
     "react-native-youtube": "^2.0.2",
     "react-native-youtube-iframe": "^2.3.0",
     "socket.io-client": "^4.7.5",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "expo-splash-screen": "~0.29.22"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "@types/react-native-fetch-blob": "^0.10.11",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.4",
+    "jest-expo": "~52.0.6",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.3.3"
